<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/ic_baseline_arrow_back_24"
            android:text="@string/back"
            android:id="@+id/backbtn"
            app:iconGravity="top"
            android:background="?attr/selectableItemBackground"
            app:iconTint="@color/black"
            android:textColor="@color/black"
            android:textAllCaps="false"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/ic_baseline_arrow_forward_24"
            android:text="@string/forward"
            app:iconGravity="top"
            android:id="@+id/forwardbtn"
            android:background="?attr/selectableItemBackground"
            app:iconTint="@color/black"
            android:textColor="@color/black"
            android:textAllCaps="false"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/ic_baseline_save_24"
            android:text="@string/save"
            app:iconGravity="top"
            android:id="@+id/savebtn"
            android:background="?attr/selectableItemBackground"
            app:iconTint="@color/black"
            android:textColor="@color/black"
            android:textAllCaps="false"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/desktopbtn"
            app:icon="@drawable/ic_baseline_laptop_windows_24"
            android:text="@string/desktop"
            app:iconGravity="top"
            android:background="?attr/selectableItemBackground"
            app:iconTint="@color/black"
            android:textColor="@color/black"
            android:textAllCaps="false"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/ic_baseline_bookmark_24"
            android:text="@string/Bookmark"
            android:id="@+id/bookmarkbtn"
            app:iconGravity="top"
            android:background="?attr/selectableItemBackground"
            app:iconTint="@color/black"
            android:textColor="@color/black"
            android:textAllCaps="false"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/ic_baseline_fullscreen_24"
            android:text="@string/fullscreen"
            app:iconGravity="top"
            android:id="@+id/fullscreenbtn"
            android:background="?attr/selectableItemBackground"
            app:iconTint="@color/black"
            android:textColor="@color/black"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>