<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/webIcon"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_search_24" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/topSearchBar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_design"
                android:hint="@string/enter_url"
                android:paddingHorizontal="5dp"
                android:singleLine="true"
                tools:ignore="TextContrastCheck" />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tabBtn"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="4dp"
                android:background="@drawable/custom_tab_textview"
                android:text="@string/one" />
            <ImageButton
                android:id="@+id/refreshBtn"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/go_btn"
                android:src="@drawable/ic_baseline_refresh_24" />

            <ImageButton
                android:id="@+id/goBtn"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/refresh_btn"
                android:src="@drawable/ic_baseline_arrow_forward_24" />

        </LinearLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleY="0.5"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/myPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

    </androidx.viewpager2.widget.ViewPager2>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/settings_btn"
        android:src="@drawable/ic_baseline_settings_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.motion.widget.MotionLayout>